Centered Cards on Mobile version Fixed Buttons on Internal Page

--- a/Css/Internal-Page.css
+++ b/Css/Internal-Page.css
@@ -341,19 +341,26 @@ h3 .price {
     gap: 10px;
 }
 
-.Send-Message, .Call-button {
-    color: white !important;
+.Send-Message {
+    color: #29B24E;
+    background-color: white;
+    border: solid 1px #29B24E;
     opacity: 1;
-    background-color: #29B24E;
     padding: 13px 26px;
     border-radius: 12px;
-    border: none;
     cursor: pointer;
     font-size: 16px;
 }
 
 .Call-button {
     background-color: #29B24E;
+    color: white ;
+    opacity: 1;
+    padding: 13px 26px;
+    border-radius: 12px;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
 }
 
 footer.footer-container {
@@ -419,6 +426,29 @@ footer.footer-container {
         margin-left: -2.5vw;
         margin-right: 2vw;
         width: 100%;
+    }
+
+    .price-and-buttons {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 12px;
+    }
+
+    .button-container {
+        padding-left: 0;
+        flex-direction: column-reverse;
+        gap: 12px;
+        width: 100%;
+    }
+
+    .button-container button {
+        width: 100%;
+    }
+
+    .Send-Message {
+        color: #29B24E;
+        background-color: white;
+        border: solid 1px #29B24E;
     }
 
     .Building-Photo {
